<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="3dp"
    android:background="#ABB2B9"

    >


    <TextView
        android:id="@+id/name"
        android:paddingTop="4dp"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:paddingLeft="13dp"
        android:textSize="@dimen/regular_text"
        />

    <ImageView
        android:id="@+id/icon"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:padding="6dp"
        app:layout_constraintTop_toBottomOf="@id/name"
        />
    <TextView
        android:id="@+id/price_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:layout_marginLeft="6dp"

        android:text="@string/price"
        android:textSize="@dimen/regular_text"
        app:layout_constraintLeft_toRightOf="@+id/name"
        app:layout_constraintStart_toEndOf="@id/icon"/>

    <TextView
        android:id="@+id/percent_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:textSize="@dimen/regular_text"
        android:layout_marginLeft="6dp"


        android:layout_weight="1"
        android:text="@string/percent"
        app:layout_constraintStart_toEndOf="@id/icon"
        app:layout_constraintTop_toBottomOf="@+id/price_label" />

    <TextView
        android:id="@+id/percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:textSize="@dimen/regular_text"
        app:layout_constraintStart_toEndOf="@id/percent_label"
        app:layout_constraintTop_toBottomOf="@+id/price_label"/>

    <TextView
        android:id="@+id/volume_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/day_volume"
        android:padding="4dp"
        android:layout_marginLeft="6dp"

        android:textSize="@dimen/regular_text"
        app:layout_constraintTop_toBottomOf="@+id/percent_label"
        app:layout_constraintStart_toEndOf="@id/icon" />


    <TextView
        android:id="@+id/market_cap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:layout_marginLeft="6dp"




        android:text="@string/market_cap"
        android:textSize="@dimen/regular_text"
        app:layout_constraintStart_toEndOf="@id/icon"
        app:layout_constraintTop_toBottomOf="@+id/volume_label"
        />






















</android.support.constraint.ConstraintLayout>



